fix: path overflow 적용 오류 수정

--- a/list.css
+++ b/list.css
@@ -543,7 +543,7 @@ footer {
 }
 
 .path {
-  display: flex;
+  display: block;
   width: inherit;
   height: 23px;
   transition: width 0.7s ease;
